--- a/css/style.css
+++ b/css/style.css
@@ -44,13 +44,10 @@ body {
 
 
 .game-container {
+    flex: 1;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
-    gap: 25px;
-
-    padding: 0 80px;
-
-
+    grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
+    gap: 20px;
 }
 
 
@@ -249,4 +246,103 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+.disabled-btn {
+    opacity: 0.5;
+    cursor: not-allowed;
+    background: gray;
+}
+
+/* Cart Summary Box */
+.cart-summary {
+    background: #121212;
+    border: 1px solid #222;
+    border-radius: 12px;
+    padding: 20px 22px;
+    width: 100%;
+    max-width: 360px;
+    color: #fff;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.6);
+}
+
+/* Title */
+.cart-summary h2 {
+    font-size: 20px;
+    margin-bottom: 15px;
+    border-bottom: 1px solid #2a2a2a;
+    padding-bottom: 10px;
+    letter-spacing: 0.5px;
+}
+
+/* Rows */
+.summary-row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 12px 0;
+    font-size: 15px;
+}
+
+/* Price text */
+.summary-row span:last-child {
+    font-weight: 600;
+}
+
+/* Divider */
+.summary-divider {
+    height: 1px;
+    background: #2a2a2a;
+    margin: 15px 0;
+}
+
+/* Grand Total */
+.grand-total {
+    font-size: 18px;
+    font-weight: bold;
+    color: #00ff9c;
+}
+
+/* Checkout Button */
+.checkout-btn {
+    margin-top: 20px;
+    width: 100%;
+    padding: 12px;
+    background: linear-gradient(#22c55e);
+    border: none;
+    border-radius: 8px;
+    font-size: 15px;
+    font-weight: 600;
+    cursor: pointer;
+    transition: 0.3s ease;
+}
+
+.checkout-btn:hover {
+    transform: translateY(-2px);
+    box-shadow: 0 5px 15px rgba(0, 255, 156, 0.4);
+}
+
+.cart-page {
+    display: flex;
+    gap: 25px;
+    align-items: flex-start;
+    padding: 20px;
+}
+
+.clear-cart-btn {
+    margin-top: 15px;
+    width: 100%;
+    padding: 12px;
+    background: #ff3b3b;
+    color: white;
+    border: none;
+    border-radius: 8px;
+    font-weight: 600;
+    cursor: pointer;
+    transition: 0.3s ease;
+}
+
+.clear-cart-btn:hover {
+    background: #d32f2f;
+    transform: translateY(-2px);
 }
