--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {
 .header {
     background-color: #090909;
     color: white;
-    padding: 15px 30px;
+    padding: 25px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -192,13 +192,12 @@ body {
     justify-content: center;
 }
 
-.game-store {
-    font-family: 'Bebas Neue', sans-serif;
-    font-size: 25px;
+/* .game-store {
+    
     letter-spacing: 5px;
     color: white;
     text-shadow: 0 0 8px rgba(0, 120, 242, 0.6);
-}
+} */
 
 
 
@@ -541,12 +540,18 @@ body>select {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 16px 24px;
-    background: #111827;
+    padding: 26px 20px 5px 25px;
+    background-color: #090909;
+
+
+
 }
 
 .logo {
     margin: 0;
+    font-family: 'Bebas Neue', sans-serif;
+    font-size: 35px;
+
 }
 
 .nav-links a {
@@ -554,6 +559,7 @@ body>select {
     text-decoration: none;
     color: inherit;
     font-weight: 500;
+
 }
 
 /* ================= ORDER DETAILS PAGE ================= */
